<resources>
    <string name="app_name">Pethelp</string>
    //МЕНЮ НАВИГАЦИИ
    <string name="menu_favorites">Избранное</string>
    <string name="menu_home">Найди любимца</string>
    <string name="menu_help">Помощь</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
    <string name="menu_settings_title_text">Настройки</string>
    <string name="radio_dog">Собаки</string>
    <string name="radio_cat">Кошки</string>
    <string name="radio_another">Другие животные</string>
    <string name="radio_shelter">Приюты</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
</resources>