<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    tools:context=".view.fragments.HelpFragment">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/menu_navigation"
                    android:layout_margin="8dp"
                    android:text="@string/radio_group_header"/>

                <RadioButton
                    android:id="@+id/radio_dog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/menu_navigation"
                    android:text="@string/radio_dog"/>
                <RadioButton
                    android:id="@+id/radio_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/menu_navigation"
                    android:text="@string/radio_cat"/>
                <RadioButton
                    android:id="@+id/radio_another"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/menu_navigation"
                    android:text="@string/radio_another"/>
                <RadioButton
                    android:id="@+id/radio_shelter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/menu_navigation"
                    android:text="@string/radio_shelter"/>
        </RadioGroup>
</FrameLayout>